# Image-Processing-OpenCV

./: README.md
Homework1/: CMakeLists.txt  build.sh
Homework1/include/opencv4/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
Homework1/include/opencv4/lib/: libopencv_aruco.so.4.0.1  libopencv_bgsegm.so.4.0.1  libopencv_bioinspired.so.4.0.1  libopencv_calib3d.so.4.0.1  libopencv_ccalib.so.4.0.1  libopencv_datasets.so.4.0.1  libopencv_dpm.so.4.0.1  libopencv_face.so.4.0.1  libopencv_features2d.so.4.0.1  libopencv_flann.so.4.0.1  libopencv_fuzzy.so.4.0.1  libopencv_hdf.so.4.0.1  libopencv_highgui.so.4.0.1  libopencv_line_descriptor.so.4.0.1  libopencv_ml.so.4.0.1  libopencv_objdetect.so.4.0.1  libopencv_optflow.so.4.0.1  libopencv_phase_unwrapping.so.4.0.1  libopencv_rgbd.so.4.0.1  libopencv_saliency.so.4.0.1  libopencv_shape.so.4.0.1  libopencv_stereo.so.4.0.1  libopencv_stitching.so.4.0.1  libopencv_structured_light.so.4.0.1  libopencv_superres.so.4.0.1  libopencv_surface_matching.so.4.0.1  libopencv_tracking.so.4.0.1  libopencv_video.so.4.0.1  libopencv_videoio.so.4.0.1  libopencv_videostab.so.4.0.1  libopencv_xfeatures2d.so.4.0.1  libopencv_ximgproc.so.4.0.1  libopencv_xobjdetect.so.4.0.1  libopencv_xphoto.so.4.0.1
Homework1/include/opencv4/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
Homework1/src/: CMakeLists.txt  hw1_1.cpp
Homework2/: CMakeLists.txt  build.sh  readme.txt
Homework2/src/: CMakeLists.txt  hw2_1.cpp  hw2_1_1 (复件).cpp  hw2_1_RGB.cpp  hw2_2.cpp
Homework3/: CMakeLists.txt  build.sh
Homework3/src/: CMakeLists.txt  hw3_1.cpp  hw3_2.cpp
Homework4/: CMakeLists.txt  Filters5x5.txt  build.sh
Homework4/src/: CMakeLists.txt  EDistanceSquare.hpp  EDistanceSquare_Template.hpp  FFT.hpp  GSharp.cpp  HomoFilt.cpp  HomoFilters.cpp  IFFT.hpp  IFFTNoNormalize.hpp  MaskPro.hpp  MaskProSingle.hpp  MaskPro_Template.hpp  Shift.hpp
Homework5/: CMakeLists.txt  build.sh
Homework5/src/: .DeNoise.cpp.swp  .IFWT.hpp.swp  CMakeLists.txt  DeNoise.cpp  Edges.cpp  FWT.hpp  FWTIFWT.cpp  MultiFWT.cpp
Homework6/: CMakeLists.txt  build.sh
Homework6/src/: .Eye.cpp.swp  .FWT.hpp.swp  .IFWT.hpp.swo  CMakeLists.txt  Eye.cpp  IFWT.hpp
Homework7/: CMakeLists.txt  build.sh  readme.txt
Homework7/src/: CMakeLists.txt  Match.cpp
Homework8/: Hoffmann1600011036吴树楠.docx
