cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(BMEIP_DiosNuumNgwa_2)
find_package(OpenCV 4 REQUIRED)
include_directories(${OPENCV_INCLUDE_DIRS})
add_subdirectory(src bin)
message(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
message(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
set_property(TARGET HW2_1 PROPERTY CXX_STANDARD 11)
set_property(TARGET HW2_2 PROPERTY CXX_STANDARD 11)
#install(FILES COPYRIGHT README DESTINATION share/doc/cmake/eigen_test)
#install(PROGRAMS runeigen_test.sh DESTINATION bin)
#install(DIRECTORY doc/ DESTINATION share/doc/cmake/eigen_test)
