cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(BMEIP_DiosNuumNgwa_7)
find_package(OpenCV 4 REQUIRED)
find_package(OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories(${OPENCV_INCLUDE_DIRS})
include_directories(include)
add_subdirectory(src bin)
message(STATUS "This is BINARY dir " ${PROJECT_BINARY_DIR})
message(STATUS "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
set_property(TARGET Match PROPERTY CXX_STANDARD 14)
