add_executable(FWTIFWT FWTIFWT.cpp)
add_executable(MultiFWT MultiFWT.cpp)
add_executable(Edges Edges.cpp)
add_executable(DeNoise DeNoise.cpp)
target_link_libraries(FWTIFWT ${OpenCV_LIBS} -lpthread)
target_link_libraries(MultiFWT ${OpenCV_LIBS} -lpthread)
target_link_libraries(Edges ${OpenCV_LIBS} -lpthread)
target_link_libraries(DeNoise ${OpenCV_LIBS} -lpthread)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
install(TARGETS FWTIFWT RUNTIME DESTINATION bin)
install(TARGETS MultiFWT RUNTIME DESTINATION bin)
install(TARGETS Edges RUNTIME DESTINATION bin)
install(TARGETS DeNoise RUNTIME DESTINATION bin)
